--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -291,15 +291,18 @@
                   <div class="col-lg-10 col-md-10 col-xs-8 dis_tex">Displaying {{results.length}} Equipments matching ‘{{query}}’</div>
                   <div class="col-lg-2 col-md-2 col-xs-4 text-right link_clr">
                     <div class="btn-group drop-btn">
-                      <button class="btn btn-mini"> Sort By</button>
-                      <button class="btn btn-mini dropdown-toggle " data-toggle="dropdown">
-                        <span class="caret"></span>
-                      </button>
-                      <ul class="dropdown-menu">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
-                      </ul>
+                      <div>
+                          <div class="btn-group" uib-dropdown is-open="status.isopen">
+                            <button id="single-button" type="button" class="btn sort-by-btn" uib-dropdown-toggle ng-disabled="disabled">
+                              Sort By <span class="caret"></span>
+                            </button>
+                            <ul class="uib-dropdown-menu" role="menu" aria-labelledby="single-button">
+                              <li role="menuitem"><a href="#">HTML</a></li>
+                              <li role="menuitem"><a href="#">CSS</a></li>
+                              <li role="menuitem"><a href="#">Javascript</a></li>
+                            </ul>
+                          </div>
+                      </div>
                     </div>
 
                     <!--                                    Sort By
