registration UI functional changes

--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -23,17 +23,6 @@
               </div>
             </form>
           </div>
-
-
-
-
-
-
-
-
-
-
-
           <div class="col-lg-12 category_filter1">
             <h5 class="cat_side_title">Category
               <span class="cat_minus"><a ng-click="flags.categoryCollapse = !flags.categoryCollapse" data-toggle="collapse" data-target="#catename"><i class="fa fa-lg" ng-class="{'fa-minus-square' : !flags.categoryCollapse,'fa-plus-square ' : flags.categoryCollapse }"></i></a></span>
@@ -297,9 +286,9 @@
                               Sort By <span class="caret"></span>
                             </button>
                             <ul class="uib-dropdown-menu" role="menu" aria-labelledby="single-button">
-                              <li role="menuitem"><a href="#">HTML</a></li>
-                              <li role="menuitem"><a href="#">CSS</a></li>
-                              <li role="menuitem"><a href="#">Javascript</a></li>
+                              <li role="menuitem"><a href="#">Price</a></li>
+                              <li role="menuitem"><a href="#">Maximum Availability</a></li>
+                              <li role="menuitem"><a href="#">Relevance</a></li>
                             </ul>
                           </div>
                       </div>
