--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -39,86 +39,115 @@
       </div>
       <!-- START  LOGIN/REGISTER TAB -->
       <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page">
-        <ul class="nav nav-tabs nav-mytab">
-          <li ng-class="{'active' : !signUpTab}"><a href="/#/login">Log in</a></li>
-          <li ng-class="{'active' : signUpTab}"><a href="/#/register" >Register</a></li>
-        </ul>
-
-        <div class="tab-content my-tab">
-          <!-- START  LOGIN TAB Content -->
-          <div id="home" class="tab-pane fade in" ng-class="{'active' : !signUpTab}">
-
-            <div class="col-lg-12 welcome_title">Welcome back!<span class="flot-right need_help"><a href="#">Need
-              Help?</a></span></div>
-
-            <div class="col-lg-12">
-              <form role="form" name="loginForm" novalidate valdr-type="User">
-                <div class="form-group" valdr-form-group>
-                  <input type="hidden" id="credentials" name="credentials" ng-model="credentials" />
-
-                </div>
-                <div class="form-group" valdr-form-group>
-                  <input type="email" autocomplete="off" class="form-control" ng-model="loginData.email" name="email"
-                         ng-required="true" placeholder="Phone, email or username">
-                </div>
-                <div class="form-group" valdr-form-group>
-                  <input type="password" autocomplete="off" name="password" ng-model="loginData.password" ng-required="true"
-                         class="form-control" placeholder="password" >
-                </div>
-                <div class="checkbox">
-                  <label><input type="checkbox"> Remember me</label>
-                  <span class="flot-right need_help"><a href="#">Forgot Password?</a></span>
-                </div>
-                <hr>
-                <button type="submit" ng-click="login()" class="btn btn-default flot-right sign_mybtn">Sign In</button>
-              </form>
+        <div ng-show="flags.registration.initiated" class="panel panel-default">
+          <div class="panel-body">
+          <div ng-show="flags.registration.success">
+            <div class="panel panel-success">
+              <div class="panel-heading">
+                <h3 class="panel-title">Registration Successful.</h3>
+              </div>
+              <div class="panel-body">
+                To verify your email address, we have sent you an email with activation details.
+                  <p><a href="/#/login">Click here to continue on login page</a></p>
+              </div>
             </div>
           </div>
-          <!-- End  LOGIN TAB Content -->
-          <!-- START  REGISTER TAB Content -->
-          <div id="menu1" class="tab-pane fade in" ng-class="{'active' : signUpTab}">
-            <div class="col-lg-12 welcome_title">Get Started - <span class="link_clr">it’s free</span><span
-              class="flot-right need_help"><a href="#">Need Help?</a></span></div>
-
-            <div class="col-lg-12">
-              <form  role="form" name="userRegisterForm"  novalidate valdr-type="UserRegister" class="register-user">
-                <div class="form-group flex-field">
-                  <fieldset valdr-form-group>
-                    <input type="text" class="form-control in-block fname_in" ng-model="UserRegisterData.firstName" name="firstName"
-                           placeholder="First Name" autocomplete="off">
-                  </fieldset>
-                  <fieldset valdr-form-group>
-                    <input type="text" class="form-control in-block fname_in" ng-model="UserRegisterData.lastName" name="lastName"
-                           placeholder="Last Name" autocomplete="off">
-                  </fieldset>
-                </div>
-                <div class="form-group" valdr-form-group>
-
-                  <input type="email" autocomplete="off" class="form-control" ng-model="UserRegisterData.email" name="email" placeholder="Email">
-                </div>
-                <div class="form-group" valdr-form;[-group>
-
-                  <input type="password" class="form-control" ng-model="UserRegisterData.password" name="password"
-                         placeholder="password" autocomplete="off">
-                </div>
-
-                <div class="form-group" valdr-form-group>
-
-                  <input type="text" class="form-control" ng-model="UserRegisterData.phone" name="phone" placeholder="Phone" autocomplete="off">
-                </div>
-                <div class="need_help">By <a href="#">Signing up</a>, you agree to findoo’s <a href="#">Terms &
-                  Conditions</a></div>
-                <hr>
-
-                <button type="submit" ng-click="register()" class="btn btn-default flot-right sign_mybtn">Sign Up
-                </button>
-
-              </form>
+          <div  ng-show="flags.registration.error">
+            <div class="panel panel-danger">
+              <div class="panel-heading">
+                <h3 class="panel-title">Registration Failed.</h3>
+              </div>
+              <div class="panel-body">
+              Something Went Wrong :(
+              </div>
             </div>
           </div>
-          <!-- End  REGISTER TAB Content -->
+          </div>
+        </div>
+        <div ng-show="!flags.registration.initiated">
+          <ul class="nav nav-tabs nav-mytab">
+            <li ng-class="{'active' : !signUpTab}"><a href="/#/login">Log in</a></li>
+            <li ng-class="{'active' : signUpTab}"><a href="/#/register" >Register</a></li>
+          </ul>
+          <div class="tab-content my-tab">
+            <!-- START  LOGIN TAB Content -->
+            <div id="home" class="tab-pane fade in" ng-class="{'active' : !signUpTab}">
+
+              <div class="col-lg-12 welcome_title">Welcome back!<span class="flot-right need_help"><a href="#">Need
+                Help?</a></span></div>
+
+              <div class="col-lg-12">
+                <form role="form" name="loginForm" novalidate valdr-type="User">
+                  <div class="form-group" valdr-form-group>
+                    <input type="hidden" id="credentials" name="credentials" ng-model="credentials" />
+
+                  </div>
+                  <div class="form-group" valdr-form-group>
+                    <input type="email" autocomplete="off" class="form-control" ng-model="loginData.email" name="email"
+                           ng-required="true" placeholder="Phone, email or username">
+                  </div>
+                  <div class="form-group" valdr-form-group>
+                    <input type="password" autocomplete="off" name="password" ng-model="loginData.password" ng-required="true"
+                           class="form-control" placeholder="password" >
+                  </div>
+                  <div class="checkbox">
+                    <label><input type="checkbox"> Remember me</label>
+                    <span class="flot-right need_help"><a href="#">Forgot Password?</a></span>
+                  </div>
+                  <hr>
+                  <button type="submit" ng-click="login()" class="btn btn-default flot-right sign_mybtn">Sign In</button>
+                </form>
+              </div>
+            </div>
+            <!-- End  LOGIN TAB Content -->
+            <!-- START  REGISTER TAB Content -->
+            <div id="menu1" class="tab-pane fade in" ng-class="{'active' : signUpTab}">
+              <div class="col-lg-12 welcome_title">Get Started - <span class="link_clr">it’s free</span><span
+                class="flot-right need_help"><a href="#">Need Help?</a></span></div>
+
+              <div class="col-lg-12">
+                <form  role="form" name="userRegisterForm"  novalidate valdr-type="UserRegister" class="register-user">
+                  <div class="form-group flex-field">
+                    <fieldset valdr-form-group>
+                      <input type="text" class="form-control in-block fname_in" ng-model="UserRegisterData.firstName" name="firstName"
+                             placeholder="First Name" autocomplete="off">
+                    </fieldset>
+                    <fieldset valdr-form-group>
+                      <input type="text" class="form-control in-block fname_in" ng-model="UserRegisterData.lastName" name="lastName"
+                             placeholder="Last Name" autocomplete="off">
+                    </fieldset>
+                  </div>
+                  <div class="form-group" valdr-form-group>
+
+                    <input type="email" autocomplete="off" class="form-control" ng-model="UserRegisterData.email" name="email" placeholder="Email">
+                  </div>
+                  <div class="form-group" valdr-form;[-group>
+
+                    <input type="password" class="form-control" ng-model="UserRegisterData.password" name="password"
+                           placeholder="password" autocomplete="off">
+                  </div>
+
+                  <div class="form-group" valdr-form-group>
+
+                    <input type="text" class="form-control" ng-model="UserRegisterData.phone" name="phone" placeholder="Phone" autocomplete="off">
+                  </div>
+                  <div class="need_help">By <a href="#">Signing up</a>, you agree to findoo’s <a href="#">Terms &
+                    Conditions</a></div>
+                  <hr>
+
+                  <button type="submit" ng-click="register()" class="btn btn-default flot-right sign_mybtn">Sign Up
+                  </button>
+
+                </form>
+              </div>
+            </div>
+            <!-- End  REGISTER TAB Content -->
+
+          </div>
 
         </div>
+
+
       </div>
       <!-- End  LOGIN/REGISTER TAB -->
     </div>
