--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -57,10 +57,15 @@
           <div  ng-show="flags.registration.error">
             <div class="panel panel-danger">
               <div class="panel-heading">
-                <h3 class="panel-title">Registration Failed.</h3>
+                <h3 class="panel-title">Registration Failed.
+                  <i class="fa fa-times"></i>
+                </h3>
               </div>
               <div class="panel-body">
-              Something Went Wrong :(
+                Something Went Wrong :(
+                <p>
+                  <a href="/#/register">Click here to continue on register page</a>
+                </p>
               </div>
             </div>
           </div>
