alignment in header and search page

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -47,7 +47,7 @@
           </li>
         </ul>
       </div>
-      <div class="btn-group drop-btn" dropdown >
+      <div class="btn-group drop-btn profile-dropdown" dropdown >
         <button class="btn btn-mini my-alc-btn"><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}</button>
         <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle" id="single-button" dropdown-toggle>
           <span class="caret"></span>
