--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -314,8 +314,8 @@
 
     <!-- START  RENT/BUY BUTTON -->
     <div class="rent_bt_main">
-      <button type="button" class="btn btn-default my-btn" ng-class="{'active' : flags.rented}" ng-click="toggleRentOrBuy(true)">RENT</button>
-      <button type="button" class="btn btn-default my-btn" ng-class="{'active' : !flags.rented}" ng-click="toggleRentOrBuy(false)">BUY</button>
+      <button type="button" class="btn my-btn rent-buy-btn" ng-class="{'active' : flags.rented}" ng-click="toggleRentOrBuy(true)">RENT</button>
+      <button type="button" class="btn my-btn rent-buy-btn" ng-class="{'active' : !flags.rented}" ng-click="toggleRentOrBuy(false)">BUY</button>
     </div>
 
     <!-- END  RENT/BUY BUTTON -->
