--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -416,7 +416,7 @@
                       </div>
 
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 right-btn-col">
                       <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve">Reserve</a>
                       <button type="button" class="btn btn-default add-list" ng-click="addToWishList(item.Product_Id)">Add to Wishlist</button>
                     </div>
