--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -8,31 +8,6 @@
       <figure>
         <img src="assets/images/popup_electric.jpg">
       </figure>
-      <h4 class="reserve_eqe_tit">
-        Jig Skytrak 42’ Telehandler 8000
-        <span class="reserve_eqe_num text-center">#8042</span>
-      </h4>
-      <div class="daily_ul">
-        <ul>
-          <li>
-            <p class="daily_title">Daily</p>
-            <p class="daily_price">$199</p>
-            <p class="daily_price_check">$239</p>
-          </li>
-          <li>
-            <p class="daily_title">Weekly</p>
-            <p class="daily_price">$1156</p>
-            <p class="daily_price_check">$1399</p>
-          </li>
-          <li>
-            <p class="daily_title">Monthly</p>
-            <p class="daily_price">$4556</p>
-            <p class="daily_price_check">$499</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-6">
       <div class="col-lg-6">
         <div class="form-group">
           <label for="email">Pickup Date</label>
@@ -61,6 +36,31 @@
             <option>4</option>
           </select>
         </div>
+      </div>
+    </div>
+    <div class="col-lg-6 reserve-right">
+      <h4 class="reserve_eqe_tit">
+        Jig Skytrak 42’ Telehandler 8000
+        <span class="reserve_eqe_num text-center">#8042</span>
+      </h4>
+      <div class="daily_ul">
+        <ul>
+          <li>
+            <p class="daily_title">Daily</p>
+            <p class="daily_price">$199</p>
+            <p class="daily_price_check">$239</p>
+          </li>
+          <li>
+            <p class="daily_title">Weekly</p>
+            <p class="daily_price">$1156</p>
+            <p class="daily_price_check">$1399</p>
+          </li>
+          <li>
+            <p class="daily_title">Monthly</p>
+            <p class="daily_price">$4556</p>
+            <p class="daily_price_check">$499</p>
+          </li>
+        </ul>
       </div>
       <div class="col-lg-6 total_price_popup">Total: <span class="total_price_cle">$349</span></div>
       <div class="col-lg-6">
