User activation flow

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -661,14 +661,6 @@ a:focus { color: #0099cc;
 .reserve-right .daily_ul {
   margin-bottom: 20px;
 }
-
-
-
-
-
-
-
-
-
-
-
+.user-activation-container{
+  text-align: center;
+}
