--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -287,7 +287,7 @@
                             </button>
                             <ul class="uib-dropdown-menu" role="menu" aria-labelledby="single-button">
                               <li role="menuitem"><a href="#">Price</a></li>
-                              <li role="menuitem"><a href="#">Maximum Availability</a></li>
+                              <li role="menuitem"><a href="#">Maximum Availablity</a></li>
                               <li role="menuitem"><a href="#">Relevance</a></li>
                             </ul>
                           </div>
