equipment reserve ui fixes

--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -4,29 +4,54 @@
     <h4 class="modal-title">Reserve this Equipment</h4>
   </div>
   <div class="modal-body" style="overflow: hidden;">
-    <div class="col-lg-6">
+    <div class="col-lg-6 reserve-left">
       <figure>
         <img src="assets/images/popup_electric.jpg">
       </figure>
-      <div class="col-lg-6">
+      <table class="table table-bordered reserve-table">
+        <thead>
+          <tr>
+            <th>Pickup Date</th>
+            <th>Pickup Date</th>
+            <th>Pickup Time</th>
+            <th>Quantity</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><input type="text" placeholder="Enter Date" class="form-control"></td>
+            <td><input type="text" placeholder="Enter Date" class="form-control"></td>
+            <td><input type="text" placeholder="Enter Time" class="form-control"></td>
+            <td>
+              <select class="form-control">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+              </select>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- <div class="col-lg-6">
         <div class="form-group">
           <label for="email">Pickup Date</label>
           <input type="email" placeholder="Enter a valid email address" id="email" class="form-control">
         </div>
-      </div>
-      <div class="col-lg-6">
+      </div> -->
+      <!-- <div class="col-lg-6">
         <div class="form-group">
           <label for="email">Pickup Date</label>
           <input type="email" placeholder="Enter a valid email address" id="email" class="form-control">
         </div>
-      </div>
-      <div class="col-lg-6">
+      </div> -->
+      <!-- <div class="col-lg-6">
         <div class="form-group">
           <label for="email">Pickup Time</label>
           <input type="email" placeholder="Enter a valid email address" id="email" class="form-control">
         </div>
-      </div>
-      <div class="col-lg-6">
+      </div> -->
+      <!-- <div class="col-lg-6">
         <div class="form-group">
           <label for="email">Quantity</label>
           <select class="form-control" id="sel1">
@@ -36,7 +61,7 @@
             <option>4</option>
           </select>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="col-lg-6 reserve-right">
       <h4 class="reserve_eqe_tit">
