jumping issue in user activate

--- a/src/app/activate-user/activate-user.html
+++ b/src/app/activate-user/activate-user.html
@@ -1,6 +1,6 @@
 <section>
 
-  <div ng-if="flags.activationInProgress">
+  <div style="min-height: 185px;" ng-if="flags.activationInProgress">
     <h4 style="margin: 20px 0 20px 40px;">Please wait while we make your account active...</h4>
   </div>
   <article class="main-cantain" ng-if="flags.activationComplete">
