--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -8,31 +8,14 @@
       <figure>
         <img src="assets/images/popup_electric.jpg">
       </figure>
-      <table class="table table-bordered reserve-table">
-        <thead>
-          <tr>
-            <th>Pickup Date</th>
-            <th>Pickup Date</th>
-            <th>Pickup Time</th>
-            <th>Quantity</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><input type="text" placeholder="Enter Date" class="form-control"></td>
-            <td><input type="text" placeholder="Enter Date" class="form-control"></td>
-            <td><input type="text" placeholder="Enter Time" class="form-control"></td>
-            <td>
-              <select class="form-control">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-              </select>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+
+      <div class="col-md-12">
+        <p class="terms">
+          <strong>Terms:</strong> Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac.
+          Curabitur dapibus iaculis. Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat
+          massa placerat ac. Curabitur dapibus iaculis.
+        </p>
+      </div>
       <!-- <div class="col-lg-6">
         <div class="form-group">
           <label for="email">Pickup Date</label>
@@ -91,16 +74,29 @@
       <div class="col-lg-6">
         <a class="btn btn-default print_btn" href="/#/equipments/12/reserve-success" type="submit">Reserve Now</a>
       </div>
-      <div class="col-md-12">
-        <p class="terms">
-          <strong>Terms:</strong> Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac.
-          Curabitur dapibus iaculis. Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat
-          massa placerat ac. Curabitur dapibus iaculis.
-        </p>
+      <div class="col-lg-12 quantity-btn">
+        <a class="btn btn-default print_btn pull-right" href="" type="submit">Add Quantity</a>
       </div>
-
-
-
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <table class="table table-bordered reserve-table">
+          <thead>
+            <tr>
+              <th>Pickup Date</th>
+              <th>Pickup Date</th>
+              <th>Pickup Time</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><input type="text" placeholder="Enter Date" class="form-control"></td>
+              <td><input type="text" placeholder="Enter Date" class="form-control"></td>
+              <td><input type="text" placeholder="Enter Time" class="form-control"></td>
+            </tr>
+          </tbody>
+      </table>
+      </div>
     </div>
   </div>
   <div class="modal-footer">
