--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -6,7 +6,7 @@
         <!-- START  Dashboard tab -->
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side">
           <ul class="nav nav-pills nav-stacked my-verti-tab">
-            <li class="active">
+            <li>
               <a data-toggle="pill" href="/#/dashboard">
                 <i class="fa fa-th-large my-verti-icon"></i>
 
@@ -14,7 +14,7 @@
             <li><a data-toggle="pill" href="#mycat">
               <i class="fa fa-heart my-verti-icon"></i>
               My Catalog</a></li>
-            <li><a data-toggle="pill" href="/#/manage/job-sites">
+            <li class="active"><a data-toggle="pill" href="/#/manage/job-sites">
               <i class="fa fa-map-marker my-verti-icon"></i>
               Manage Job Sites</a></li>
             <li><a data-toggle="pill" href="#myalc">
@@ -49,9 +49,15 @@
                 Manage Job Sites
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit">
-                <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span>
+                <input type="text" placeholder="Search Sites" class="form-control pull-right mng-search-bar">
+                <!-- <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span> -->
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col">
+                <button class="btn pull-left manage-job-btn">Add Job Site</button>
+                <button class="btn btn-default pull-right manage-job-btn deactivate list">List View</button>
+                <button class="btn pull-right manage-job-btn map">Map View</button>
+              </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box">
                 <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
               </div>
