--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side">
           <ul class="nav nav-pills nav-stacked my-verti-tab">
-            <li class="active">
+            <li>
               <a data-toggle="pill" href="/#/dashboard">
                 <i class="fa fa-th-large my-verti-icon"></i>
 
@@ -26,7 +26,7 @@
             <li><a data-toggle="pill" href="#makepay">
               <i class="fa fa-usd my-verti-icon"></i>
               Make a Payment</a></li>
-            <li><a data-toggle="pill" href="/#/invoices">
+            <li class="active"><a data-toggle="pill" href="/#/invoices">
               <i class="fa fa-file my-verti-icon"></i>
 
               View Invoices</a></li>
@@ -40,7 +40,22 @@
         </div>
           <div class="col-md-9">
             <div class="content-wrapper1">
-              <section class="content-header">
+              <div id="dash" class="tab-pane fade in active">
+
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
+                  Invoices
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit">
+                  <input type="text" placeholder="Search Invoices" class="form-control pull-right mng-search-bar">
+                  <!-- <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span> -->
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col" style="padding-bottom: 20px;">
+                  <button class="btn btn-default pull-right manage-job-btn deactivate list">Outstanding</button>
+                  <button class="btn pull-right manage-job-btn map">All Invoices</button>
+                </div>
+            </div>
+              <!-- <section class="content-header">
                 <h1>
                   Invoices
                 </h1>
@@ -60,7 +75,7 @@
                     All Invoices/ Outstanding
                   </div>
                 </div>
-              </section>
+              </section> -->
               <br>
               <table class="table table-striped">
                 <thead>
@@ -76,7 +91,7 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="invoice in invoices">
-                  <td>{{invoice.no}}</td>
+                  <td class="invoice-no">{{invoice.no}}</td>
                   <td>{{invoice.jobsite}}</td>
                   <td>{{invoice.contract}}</td>
                   <td>{{invoice.purchaseOrder}}</td>
