--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -423,6 +423,48 @@
                     <div class="col-md-12"><hr class="dash"></div>
                   </div>
                 </div>
+                <div class="row no-search-row" ng-if="!results">
+                  <div class="col-md-12 col1">
+                      <p>Let us help you out</p>
+                  </div>
+                  <div class="col-md-12 col2">
+                    <p>What do you need?</p>
+                    <input type="text" placeholder="Type of equipment, service, parts, etc." class="form-control" style="height: 38px;">
+                  </div>
+                  <div class="col-md-12 col2">
+                    <p>When do you need it?</p>
+                  </div>
+                  <div class="col-md-6 col2 col3" style="padding-top:0;">
+                    <div class="form-control form-left" style="height: 38px;">
+                      <p class="pull-left">To</p>
+                      <input type="text" placeholder="dd/mm/yy">
+                      <img src="assets/images/calendar.png" class="pull-right">
+                    </div>
+                  </div>
+                  <div class="col-md-6 col2 col3" style="padding-top:0;">
+                    <div class="form-control form-left" style="height: 38px;">
+                      <p class="pull-left">From</p>
+                      <input type="text" placeholder="dd/mm/yy">
+                      <img src="assets/images/calendar.png" class="pull-right">
+                    </div>
+                  </div>
+                  <div class="col-md-6 col2 col3">
+                    <p>Email</p>
+                    <div class="form-control form-left" style="height: 38px;">
+                      <input type="text" placeholder="Enter a valid email address" class="info-input">
+                    </div>
+                  </div>
+                  <div class="col-md-6 col2 col3">
+                    <p>Phone</p>
+                    <div class="form-control form-left" style="height: 38px;">
+                      <input type="text" placeholder="(xxx)-xxx-xxxxx)" class="info-input">
+                    </div>
+                  </div>
+                  <div class="col-md-12 col1"></div>
+                  <div class="col-md-12 col4">
+                    <button class="btn btn-primary pull-right">Request Further Information</button>
+                  </div>
+                </div>
 
               </div>
               <!-- End Equipment Product Display -->
