--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -734,6 +734,64 @@ a:focus { color: #0099cc;
   color: #009ddc;
 }
 
+.no-search-row {
+  margin: 0;
+}
+
+.no-search-row .col1 {
+  border-bottom: 1px solid rgba(204, 204, 204, .75);
+  padding-bottom: 17px;
+}
+
+.no-search-row .col1 p {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 21px;
+  margin: 0;
+}
+
+.no-search-row .col2 {
+  padding-top: 29px;
+}
+
+.no-search-row .col2 p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 6px;
+}
+
+.no-search-row .form-left p {
+  margin-left: 21px;
+  margin-right: 26px;
+}
+
+.no-search-row .form-left input {
+  border: none;
+  border-left: 1px dashed #cccccc;
+  outline: none;
+  padding-left: 19px;
+}
+
+.no-search-row .form-left .info-input {
+  border: none;
+  padding-left: 0;
+  padding-right: 0;
+  width: 100%;
+}
+
+.no-search-row .col4 {
+  padding-top: 16px;
+}
+
+.no-search-row .col4 button {
+  font-weight: 600;
+  font-size: 14px;
+  background-color: #009ddc;
+}
+
+
+
 
 
 
