need help popup

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -19,10 +19,8 @@
                typeahead-template-url="typeahead-item.html">
 
         <button class="btn btn-default my_search" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i></button>
-
+        <a href="/#/help" class="help-link">Don't see what you need?</a>
       </form>
-
-
 
     </div>
     <!-- END  Search box -->
