--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -280,7 +280,7 @@
 
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-4 col-xs-5 eqe_main">
+      <div class="col-lg-3 col-md-4 col-sm-4 col-xs-5 eqe_main" style="margin-left: 30px;">
 
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-1 nopadding ">
           <span class="glyphicon glyphicon-earphone"></span>
