--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -424,6 +424,9 @@
                   </div>
                 </div>
                 <div class="row no-search-row" ng-if="!results">
+                  <div class="col-md-12 text-col">
+                    <p style="text-align: center;">Sorry, no result found for "{{query}}". Let us help you out. Tell us what do need? We will get back to you.</p>
+                  </div>
                   <div class="col-md-12 col1">
                       <p>Let us help you out</p>
                   </div>
