eqipment reserve page changes

--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -6,7 +6,7 @@
   <div class="modal-body" style="overflow: hidden;">
     <div class="col-lg-6 reserve-left">
       <figure>
-        <img src="assets/images/popup_electric.jpg">
+        <img ng-src="{{product.Product_Image[0].ProductImage_Path}}" alt="">
       </figure>
 
       <div class="col-md-12">
