--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -6,7 +6,7 @@
   <div class="modal-body" style="overflow: hidden;">
     <div class="col-lg-6 reserve-left">
       <figure>
-        <img ng-src="{{product.Product_Image[0].ProductImage_Path}}" alt="">
+        <img ng-src="{{product.Product_Image[0].ProductImage_Path}}" alt="" style="width: 100%;">
       </figure>
 
       <div class="col-md-12">
@@ -72,7 +72,7 @@
       </div>
       <div class="col-lg-6 total_price_popup">Total: <span class="total_price_cle">$349</span></div>
       <div class="col-lg-6">
-        <a class="btn btn-default print_btn" href="/#/equipments/12/reserve-success" type="submit">Reserve Now</a>
+        <a class="btn btn-default print_btn pull-right" href="/#/equipments/12/reserve-success" type="submit">Reserve Now</a>
       </div>
       <div class="col-lg-12 quantity-btn">
         <a class="btn btn-default print_btn pull-right" href="" type="submit">Add Quantity</a>
