--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -49,6 +49,7 @@
                 <input type="text" id="inputHelpBlock" placeholder="Enter Email"class="form-control" aria-describedby="helpBlock">
               </div>
               <span id="helpBlock" class="help-block">Enter the email address associated with your Nobleiron account. We will get back to you with instructions to reset password.</span>
+              <button type="submit" class="btn btn-default">Submit</button>
             </form>
           </div>
         </div>
