--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -45,10 +45,11 @@
 
             <form>
               <h3>Forgot Password?</h3>
-              <div class="form-group">
-                <input type="text" id="inputHelpBlock" placeholder="Enter Email"class="form-control" aria-describedby="helpBlock">
-              </div>
               <span id="helpBlock" class="help-block">Enter the email address associated with your Nobleiron account. We will get back to you with instructions to reset password.</span>
+              <div class="form-group">
+                <input type="text" autocomplete="off" id="inputHelpBlock" placeholder="Enter Email"class="form-control" aria-describedby="helpBlock">
+              </div>
+
               <button type="submit" class="btn btn-default">Submit</button>
             </form>
           </div>
