--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -42,16 +42,22 @@
 
         <div class="panel panel-default">
           <div class="panel-body">
+            <div ng-show="!flags.forgotPasswordNotifyInitiated">
+              <form role="form" name="forgotPasswordForm" novalidate valdr-type="User">
+                <h3>Forgot Password?</h3>
+                <span id="helpBlock" class="help-block">Enter the email address associated with your Nobleiron account. We will get back to you with instructions to reset password.</span>
+                <div class="form-group">
+                  <input type="email" autocomplete="off" class="form-control" ng-model="forgotPasswordData.email" name="email"
+                         ng-required="true" placeholder="Enter email">
+                </div>
+                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default">Submit</button>
+              </form>
+            </div>
+            <div ng-show="flags.forgotPasswordNotifyInitiated">
+              We sent you an instruction to reset password. Please check your email.
+            </div>
 
-            <form>
-              <h3>Forgot Password?</h3>
-              <span id="helpBlock" class="help-block">Enter the email address associated with your Nobleiron account. We will get back to you with instructions to reset password.</span>
-              <div class="form-group">
-                <input type="text" autocomplete="off" id="inputHelpBlock" placeholder="Enter Email"class="form-control" aria-describedby="helpBlock">
-              </div>
 
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
           </div>
         </div>
 
