--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -80,7 +80,7 @@
             <!-- START  LOGIN TAB Content -->
             <div id="home" class="tab-pane fade in" ng-class="{'active' : !signUpTab}">
 
-              <div class="col-lg-12 welcome_title">Welcome back!<span class="flot-right need_help"><a href="#">Need
+              <div class="col-lg-12 welcome_title">Welcome back!<span class="flot-right need_help"><a href="/#/help">Need
                 Help?</a></span></div>
 
               <div class="col-lg-12">
@@ -99,7 +99,7 @@
                   </div>
                   <div class="checkbox">
                     <label><input type="checkbox"> Remember me</label>
-                    <span class="flot-right need_help"><a href="#">Forgot Password?</a></span>
+                    <span class="flot-right need_help"><a href="/#/forgot-password">Forgot Password?</a></span>
                   </div>
                   <hr>
                   <button type="submit" ng-click="login()" class="btn btn-default flot-right sign_mybtn">Sign In</button>
@@ -110,7 +110,7 @@
             <!-- START  REGISTER TAB Content -->
             <div id="menu1" class="tab-pane fade in" ng-class="{'active' : signUpTab}">
               <div class="col-lg-12 welcome_title">Get Started - <span class="link_clr">it’s free</span><span
-                class="flot-right need_help"><a href="#">Need Help?</a></span></div>
+                class="flot-right need_help"><a href="/#/help">Need Help?</a></span></div>
 
               <div class="col-lg-12">
                 <form  role="form" name="userRegisterForm"  novalidate valdr-type="UserRegister" class="register-user">
