--- a/src/app/prelogin-header/prelogin-header.html
+++ b/src/app/prelogin-header/prelogin-header.html
@@ -24,7 +24,9 @@
     <!-- END  Search box -->
     <div class="col-lg-4 col-md-2 col-sm-6 col-xs-12 my_alc">
       <div class="btn-group drop-btn">
-        <button class="btn btn-mini my-alc-btn">My Account</button>
+        <a href="/#/login" ng-if="$state.is('hmPrelogin.register')">Sign in</a>
+        <a href="/#/register" ng-if="$state.is('hmPrelogin.login')">Register</a>
+        <!-- <button class="btn btn-mini my-alc-btn">My Account</button>
         <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle" data-toggle="dropdown">
           <span class="caret"></span>
         </button>
@@ -32,7 +34,7 @@
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
-        </ul>
+        </ul> -->
       </div>
     </div>
   </div>
