forgot password changes

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -138,7 +138,9 @@
 
                     <input type="text" class="form-control" ng-model="UserRegisterData.phone" name="phone" placeholder="Phone" autocomplete="off">
                   </div>
-                  <div class="need_help">By <a href="#">Signing up</a>, you agree to findoo’s <a href="#">Terms &
+                  <div class="need_help">
+                    <input type="checkbox">
+                      By Signing up, you agree to findoo’s <a href="/#/terms-n-conditions">Terms &
                     Conditions</a></div>
                   <hr>
 
