--- a/src/app/prelogin-header/prelogin-header.html
+++ b/src/app/prelogin-header/prelogin-header.html
@@ -24,7 +24,7 @@
     <!-- END  Search box -->
     <div class="col-lg-4 col-md-2 col-sm-6 col-xs-12 my_alc">
       <div class="btn-group drop-btn">
-        <a href="/#/login" ng-if="$state.is('hmPrelogin.register')">Sign in</a>
+        <a href="/#/login" ng-if="$state.is('hmPrelogin.register') || $state.is('hmPrelogin.forgotPassword')">Sign in</a>
         <a href="/#/register" ng-if="$state.is('hmPrelogin.login')">Register</a>
         <!-- <button class="btn btn-mini my-alc-btn">My Account</button>
         <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle" data-toggle="dropdown">
