--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -15,16 +15,16 @@
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 nopadding ">
           <!-- START-dropdown-wrapper -->
           <div class="cd-dropdown-wrapper">
-            <a class="cd-dropdown-trigger eqe_tex" href="#0">Equipments</a>
+            <a class="cd-dropdown-trigger eqe_tex" menu-aim-dir href="#0">Equipments</a>
             <nav class="cd-dropdown">
               <h2>Title</h2>
               <a href="#0" class="cd-close">Close</a>
               <ul class="cd-dropdown-content">
-                <li>
+                <!-- <li>
                   <form class="cd-search">
                     <input type="search" placeholder="Search...">
                   </form>
-                </li>
+                </li> -->
                 <li class="has-children">
                   <a href="#">Clothing</a>
 
@@ -260,12 +260,6 @@
 
                   </ul> <!-- .cd-dropdown-icons -->
                 </li> <!-- .has-children -->
-
-                <li class="cd-divider">Divider</li>
-
-                <li><a href="#">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
               </ul> <!-- .cd-dropdown-content -->
             </nav> <!-- .cd-dropdown -->
           </div>
