--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -25,8 +25,8 @@
                     <input type="search" placeholder="Search...">
                   </form>
                 </li> -->
-                <li class="has-children">
-                  <a href="#">Clothing</a>
+                <li class="has-children" ng-repeat="menu in equipmentMenus">
+                  <a href="#">{{menu.Name}}</a>
 
                   <ul class="cd-secondary-dropdown is-hidden">
                     <li class="go-back"><a href="#0">Menu</a></li>
