forgot password ui changes

--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -38,19 +38,20 @@
         </div>
       </div>
       <!-- START  LOGIN/REGISTER TAB -->
-      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page">
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page forgot-password-col">
 
         <div class="panel panel-default">
           <div class="panel-body">
             <div ng-show="!flags.forgotPasswordNotifyInitiated">
               <form role="form" name="forgotPasswordForm" novalidate valdr-type="User">
-                <h3>Forgot Password?</h3>
+                <h3 class="heading">Forgot Password?</h3>
                 <span id="helpBlock" class="help-block">Enter the email address associated with your Nobleiron account. We will get back to you with instructions to reset password.</span>
                 <div class="form-group">
                   <input type="email" autocomplete="off" class="form-control" ng-model="forgotPasswordData.email" name="email"
                          ng-required="true" placeholder="Enter email">
                 </div>
-                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default">Submit</button>
+                <a href="#/login" class="btn btn-default pull-right" style="margin-left: 10px;">Cancel</a>
+                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-success pull-right">Submit</button>
               </form>
             </div>
             <div ng-show="flags.forgotPasswordNotifyInitiated">
