pre login ui changes

--- a/src/app/prelogin-header/prelogin-header.html
+++ b/src/app/prelogin-header/prelogin-header.html
@@ -6,7 +6,7 @@
     </div>
     <!-- END  logo -->
     <!-- START  Search box -->
-    <div class="col-lg-7 col-md-6 col-sm-4 col-xs-12">
+    <div class="col-lg-7 col-md-6 col-sm-4 col-xs-12 prelogin-header-col">
 
       <form class="navbar-form topnav-search" role="search">
 
@@ -22,7 +22,7 @@
 
     </div>
     <!-- END  Search box -->
-    <div class="col-lg-4 col-md-2 col-sm-6 col-xs-12 my_alc">
+    <div class="col-lg-4 col-md-2 col-sm-6 col-xs-12 my_alc prelogin-header-btn">
       <div class="btn-group drop-btn">
         <a href="/#/login" ng-if="$state.is('hmPrelogin.register') || $state.is('hmPrelogin.forgotPassword')">Sign in</a>
         <a href="/#/register" ng-if="$state.is('hmPrelogin.login')">Register</a>
