Infinite scroll changes

--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -489,7 +489,7 @@
       </div>
 
     </div>
-    <div infinite-scroll="myPagingFunction()" infinite-scroll-distance="3"></div>
+    <div infinite-scroll="lazyLoadSearchResult()" infinite-scroll-distance="3"></div>
   </article>
 
   <!-- End  Main Content -->
