--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -423,7 +423,7 @@
                     <div class="col-md-12"><hr class="dash"></div>
                   </div>
                 </div>
-                <div class="row no-search-row" ng-if="!results">
+                <div class="row no-search-row" ng-if="!results.length">
                   <div class="col-md-12 text-col">
                     <p style="text-align: center;">Sorry, no result found for "{{query}}". Let us help you out. Tell us what do need? We will get back to you.</p>
                   </div>
