login user name issue

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -140,7 +140,7 @@
                   </div>
                   <div class="need_help">
                     <input type="checkbox">
-                      By Signing up, you agree to findoo’s <a href="/#/terms-n-conditions">Terms &
+                      By Signing up, you agree to NobleIron's <a href="/#/terms-n-conditions">Terms &
                     Conditions</a></div>
                   <hr>
 
