login user name issue

--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -298,7 +298,7 @@
     <!-- END  SIGN IN PART -->
     <!-- START  Get Software PART -->
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12  head_btn_main">
-      <button type="button" class="btn btn-default get_soft">Get Software</button>
+      <!-- <button type="button" class="btn btn-default get_soft">Get Software</button> -->
       <a type="button" class="btn btn-default get_soft" href="/#/register" >Get Free Account</a>
     </div>
     <!-- END  Get Software PART -->
