login user name issue

--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -620,7 +620,7 @@
             rhoncus felis odio, ut volutpat massa placerat ac. Curabitur
             dapibus iaculis.
           </p>
-          <button type="button" class="btn btn-default sell-equ">Sell Your Equipment</button>
+          <button type="button" class="btn btn-default sell-equ" ng-click="$state.go('hm.sellEquipment')">Sell Your Equipment</button>
         </div>
         <!-- End About Us -->
         <!-- START Company -->
