--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -17,7 +17,7 @@
             <li><a data-toggle="pill" href="/#/manage/jobsites">
               <i class="fa fa-map-marker my-verti-icon"></i>
               Manage Job Sites</a></li>
-            <li><a data-toggle="pill" href="#myalc">
+            <li><a data-toggle="pill" href="/#/manage-my-account">
               <i class="fa fa-user my-verti-icon"></i>
               Manage My Account</a></li>
             <li><a data-toggle="pill" href="#quotes">
