--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -20,20 +20,20 @@
             <li><a data-toggle="pill" href="/#/manage-my-account">
               <i class="fa fa-user my-verti-icon"></i>
               Manage My Account</a></li>
-            <li><a data-toggle="pill" href="#quotes">
+            <li><a data-toggle="pill" href="/#/quota-n-reservations">
               <i class="fa fa-bookmark-o my-verti-icon"></i>
               Quotes &amp;
               Reservations</a></li>
-            <li><a data-toggle="pill" href="#makepay">
+            <li><a data-toggle="pill" href="/#/quota-n-reservations">
               <i class="fa fa-usd my-verti-icon"></i>
               Make a Payment</a></li>
             <li><a data-toggle="pill" href="/#/invoices">
               <i class="fa fa-file my-verti-icon"></i>
 
               View Invoices</a></li>
-            <li><a data-toggle="pill" href="#req"><i class="fa fa-comments"></i>
+            <li><a data-toggle="pill" href="/#/quota-n-reservations"><i class="fa fa-comments"></i>
               Requests</a></li>
-            <li><a data-toggle="pill" href="#viewcon"><i class="fa fa-briefcase"></i>
+            <li><a data-toggle="pill" href="/#/quota-n-reservations"><i class="fa fa-briefcase"></i>
               View Contracts</a></li>
 
           </ul>
