add job site page

--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -54,7 +54,7 @@
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col">
-                <button class="btn pull-left manage-job-btn">Add Job Site</button>
+                <a href="#/add-job" class="btn pull-left manage-job-btn">Add Job Site</a>
                 <button class="btn btn-default pull-right manage-job-btn deactivate list">List View</button>
                 <button class="btn pull-right manage-job-btn map">Map View</button>
               </div>
