job site detail page

--- a/src/app/add-job-site/add-job-site.html
+++ b/src/app/add-job-site/add-job-site.html
@@ -4,7 +4,7 @@
 	</div>
 </div>
 <div class="row fields-row">
-	<div class="col-md-12 col">
+	<div class="col-md-12 site-col">
 		<input type="text" placeholder="Job Site Name" class="form-control">
 	</div>
 	<div class="col-md-6 other-col">
@@ -32,7 +32,7 @@
 	</div>
 </div>
 <div class="row" style="margin: 0;">
-	<div class="col-md-12 btn-col">
+	<div class="col-md-12 site-col">
 		<button class="btn job-btn">Add Job Site</button>
 		<button class="btn job-btn">Cancel</button>
 	</div>
